# fluffy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fluffy/: __init__.py  cli.py  pet.py
tests/: test_fluffy.py
